# OctoPrint-MultiLineTerminal

./: MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  setup.py
octoprint_multilineterminal/: __init__.py
octoprint_multilineterminal/static/css/: multilineterminal.css
octoprint_multilineterminal/static/js/: multilineterminal.js
translations/: README.txt
